# Course-Recommendation-System

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml  train.py
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: quick_start.ipynb
scripts/: generate_data.py
src/course_recommender/: __init__.py
src/course_recommender/data/: __init__.py
src/course_recommender/evaluation/: __init__.py
src/course_recommender/utils/: __init__.py
tests/: test_course_recommender.py
